# Spatialite

./: CMakeLists.txt  CMakePresets.json  Readme.md
src/: CMakeLists.txt
src/connection_cache/: CMakeLists.txt
src/control_points/: CMakeLists.txt
src/cutter/: CMakeLists.txt
src/dxf/: CMakeLists.txt
src/gaiaaux/: CMakeLists.txt
src/gaiaexif/: CMakeLists.txt
src/gaiageo/: CMakeLists.txt
src/geopackage/: CMakeLists.txt
src/headers/: CMakeLists.txt
src/md5/: CMakeLists.txt
src/shapefiles/: CMakeLists.txt
src/spatialite/: CMakeLists.txt
src/srsinit/: CMakeLists.txt  epsg_inlined_21.c  epsg_inlined_25.c
src/stored_procedures/: CMakeLists.txt
src/topology/: CMakeLists.txt
src/virtualtext/: CMakeLists.txt
src/wfs/: CMakeLists.txt
