add_subdirectory(gaiaaux)
add_subdirectory(gaiaexif)
add_subdirectory(gaiageo)
add_subdirectory(geopackage)
add_subdirectory(spatialite)
add_subdirectory(shapefiles)
add_subdirectory(srsinit)
add_subdirectory(headers)
add_subdirectory(connection_cache)
add_subdirectory(virtualtext)
add_subdirectory(wfs)
add_subdirectory(dxf)
add_subdirectory(md5)
add_subdirectory(control_points)
add_subdirectory(cutter)
add_subdirectory(topology)
add_subdirectory(stored_procedures)
